<resources>
    <string name="app_name">sTORe</string>


    <string name="nav_apps">Apps</string>
    <string name="nav_updates">Updates</string>
    <string name="nav_about">About</string>
    <string name="nav_proxy_status">Proxy Status</string>


    <string name="sad_face">:(</string>
    <string name="retry">Retry</string>
    <string name="refresh">Refresh</string>
    <string name="stop">Stop</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="okay">Okay</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="no_apps">No apps found</string>

    <string name="generic_error">Something went wrong</string>


    <string name="proxy_service_notification_text">TOR proxy is running...</string>


    <string name="download_service_download_failed_notification">Something went wrong, the app was not downloaded.</string>
    <string name="download_service_download_complete_notification">The app is downloaded, touch to install.</string>


    <string name="review_service_review_not_created_notification">Something went wrong, your review was not created.</string>
    <string name="review_service_created_review_notification">Your reviewed was created.</string>


    <string name="update_prompt_receiver_update_prompt_notification">Time to check for app updates.</string>


    <string name="menu_search">Search</string>


    <string name="main_activity_category_communication">Communication</string>
    <string name="main_activity_category_entertainment">Entertainment</string>
    <string name="main_activity_category_shopping">Shopping</string>
    <string name="main_activity_category_utilities">Utilities</string>

    <string name="main_activity_tor_proxy_dialog_title">Just so you know...</string>
    <string name="main_activity_tor_proxy_dialog_description">The sTORe uses a TOR proxy to improve your privacy when content is loaded. A notification is displayed while the TOR proxy is running and can be used to stop the TOR proxy at anytime.</string>


    <string name="proxy_status_activity_proxy_is_running">TOR proxy is running</string>
    <string name="proxy_status_activity_proxy_is_not_running">TOR proxy is not running</string>

    <string name="proxy_status_activity_dialog_title">Stop the proxy?</string>
    <string name="proxy_status_activity_dialog_description">While most apps should restart the TOR proxy if it is required, stopping the TOR proxy may cause some apps to stop working. Do you still want to stop the proxy?</string>


    <string name="app_activity_create_review">Create Review</string>
    <string name="app_activity_install">Install</string>
    <string name="app_activity_update">Update</string>
    <string name="app_activity_open">Open</string>
    <string name="app_activity_reviews_title">Reviews:</string>
    <string name="app_activity_reviews_show_all"><u>Show all</u></string>
    <string name="app_activity_reviews_no_reviews">No reviews to show</string>
    <string name="app_activity_app_no_longer_installed">This app doesn\'t seem to be installed anymore</string>
    <string name="app_activity_app_downloading">Downloading this app...</string>



    <string name="update_activity_checking_for_updates">Checking for updates</string>
    <string name="update_activity_no_updates">No updates needed</string>


    <string name="search_dialog_title">What are you looking for?</string>
    <string name="search_dialog_keywords_hint">Star Wars</string>
    <string name="search_dialog_keywords_required">Search query required</string>


    <string name="create_review_dialog_title">Create Review</string>
    <string name="create_review_dialog_star_rating">Your rating:</string>
    <string name="create_review_dialog_description">Your message:</string>
    <string name="create_review_dialog_creating_review">Creating your review...</string>


    <string name="about_activity_store_title">About the sTORe:</string>
    <string name="about_activity_store_description">The sTORe is an app store where you can download and install applications anonymously. The sTORe also provides installed apps with the connectivity required to increase your privacy online.</string>

    <string name="about_activity_proxy_title">About the proxy:</string>
    <string name="about_activity_proxy_description">To increase your privacy, the sTORe uses TOR for the network connections it establishes. The TOR proxy runs to provide connectivity for the sTORe and related applications. While it is running a notification is shown so you are always aware.\n\nYou can stop the TOR proxy at anytime but that will prevent connectivity and may cause the sTORe and related apps to no longer work. Most applications should restart the TOR proxy if it is required.</string>

    <string name="about_activity_developer_title">Become a developer:</string>
    <string name="about_activity_developer_description">Visit http://q6yl3es3js7j3gm3.onion using a web browser with TOR connectivity to register as a developer.</string>


    <string name="search_activity_loading_apps">Searching for apps...</string>


    <string name="category_app_list_fragment_loading_apps">Finding apps...</string>


</resources>
